--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-nbproject/private/
+nbproject/private/private.properties
+nbproject/private/private.xml
+nbproject/project.properties
+nbproject/project.xml
 build/
 nbbuild/
 dist/
