.git ignore change

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,20 @@ dist/
 nbdist/
 nbactions.xml
 .nb-gradle/
+
+# NetBeans specific #
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
